--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,10 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -44,8 +42,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [
-                {
+              "budgets": [{
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
@@ -119,6 +116,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "web-sale-post-product"
+    }
+  },
+  "defaultProject": "web-sale-post-product",
+  "cli": {
+    "analytics": "85f5348a-80d1-4e93-b273-af23e45838bb"
+  }
 }
